--- a/src/app/components/small-card/small-card.component.css
+++ b/src/app/components/small-card/small-card.component.css
@@ -1,5 +1,11 @@
-.container__small-card {
+.container__small-card > a {
   display: flex;
+  flex-direction: row;
   gap: 10px;
   max-width: 900px;
+}
+
+.small-card__image > img {
+  width: 300px;
+  height: 200px;
 }
